cabal-version:       2.2
name:                rustorion-gtk
version:             0
-- synopsis:
-- description:
license:             AGPL-3.0-only
license-file:        LICENSE
author:              Sergey Alirzaev
maintainer:          zl29ah@gmail.com
-- copyright:
category:            Game
build-type:          Simple

executable rustorion-gtk
  main-is:             rustorion-gtk.hs
  ghc-options:         -W -fno-warn-tabs -threaded
  other-modules:
                       Actions
                       CertGen
                       RPC
                       Types
  build-depends:       base >= 4.12 && < 4.15,
                       msgpack-binary >=0.0 && <0.1,
                       msgpack-types ^>= 0,
                       binary ^>= 0.8,
                       tls ^>= 1.5,
                       connection ^>= 0.3,
                       x509-store ^>= 1.6,
                       x509 ^>= 1.7,
                       pem ^>= 0.2,
                       data-default ^>= 0.7,
                       bytestring ^>= 0.10,
                       containers ^>= 0.6,
                       text ^>= 1.2.3.1,
                       gtk3 >= 0.14 && < 0.16,
                       cairo ^>= 0.13,
                       transformers ^>= 0.5,
                       stm ^>= 2.5,
                       hourglass ^>= 0.2.12,
                       cryptonite ^>= 0.26,
                       asn1-encoding ^>= 0.9.6,
                       asn1-types ^>= 0.3.4,
                       directory ^>= 1.3,
                       sdl2 ^>= 2.5.1,
                       sdl2-mixer ^>= 1.1,
  default-language:    Haskell2010
